# avalon

./: .pre-commit-config.yaml  README.md  config-agents.yaml  config-all-agents.yaml  config-play-with-agents.yaml  config-test-openai.yaml  config-test-openrouter.yaml  config.yaml  demo_agents.py  project_plan.md  pyproject.toml  run_agent_game.py  run_openai_game.py  run_openrouter_game.py
docs/: cli.md  events-and-persistence.md  overview.md
src/avalon/: __init__.py  agent_manager.py  agents.py  config.py  config_loader.py  discussion.py  enums.py  events.py  exceptions.py  game_state.py  interaction.py  knowledge.py  llm_client.py  logging_manager.py  mock_llm_client.py  openai_client.py  openrouter_client.py  persistence.py  players.py  roles.py  setup.py
tests/: test_agent_integration.py  test_agents.py  test_config.py  test_config_loader.py  test_discussion.py  test_events.py  test_game_state.py  test_game_state_discussion.py  test_interaction.py  test_knowledge.py  test_persistence.py  test_roles.py  test_setup.py
