[tool.poetry]
name = "avalon"
version = "0.1.0"
description = "Avalon board game engine"
authors = []
readme = "README.md"
packages = [{ include = "avalon", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.3"
google-generativeai = "^0.8.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
pytest = "^8.3.0"
ruff = "^0.6.0"
pre-commit = "^3.7.0"
types-pyyaml = "^6.0.12.20250915"

[tool.ruff]
line-length = 100
target-version = "py310"
indent-width = 4
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
